[package]
edition = "2021"
name = "stm32h7"
version = "0.15.1"
authors = ["Adam Greig <adam@adamgreig.com>", "stm32-rs Contributors"]
description = "Device support crates for STM32H7 devices"
repository = "https://github.com/stm32-rs/stm32-rs"
readme = "README.md"
keywords = ["stm32", "svd2rust", "no_std", "embedded"]
categories = ["embedded", "no-std"]
license = "MIT/Apache-2.0"

[dependencies]
bare-metal = { git = "https://github.com/Sonair-AS/bare-metal.git", branch = "certified_subset" }
vcell = "0.1.3"
cortex-m = { git = "https://github.com/Sonair-AS/cortex-m.git", branch = "certified_subset", package = "cortex-m" }

[dependencies.cortex-m-rt]
optional = true
git = "https://github.com/Sonair-AS/cortex-m.git"
branch = "certified_subset"
package = "cortex-m-rt"

[package.metadata.docs.rs]
features = ['rt', 'stm32h743', 'stm32h743v', 'stm32h747cm7']
default-target = "thumbv7em-none-eabihf"
targets = []

[features]
default = ["rt", "impl-debug"]
rt = ["cortex-m-rt/device"]
stm32h735 = []
stm32h743 = []
stm32h743v = []
stm32h747cm4 = []
stm32h747cm7 = []
stm32h753 = []
stm32h753v = []
stm32h7b3 = []

impl-debug = []

certified_subset = [
    "bare-metal/certified_subset",
    "cortex-m/certified_subset",
    "cortex-m-rt/certified_subset",
]

[lints.rust]
mismatched_lifetime_syntaxes = "allow"
